# AeroWeather

./: LICENSE  _Instructions.md  _README.md
AeroWeatherInsights/: _ISSUES.md  _README.md  main.py  model.sav  pyproject.toml  results.pkl  scalar.sav  scheduler.py
AeroWeatherInsights/.streamlit/: config.toml
AeroWeatherInsights/.upm/: store.json
AeroWeatherInsights/data/: aviation_data.db
AeroWeatherInsights/pages/: airport_analysis.py  delay_patterns.py  predictions.py  weather_correlation.py
AeroWeatherInsights/utils/: _Instructions.md  analysis.py  data_collection.py  data_processor.py  requirements.txt  visualization.py  weather_service.py
