[project]
name = "AeroWeather"
version = "0.1.0"
description = "Looks at flights delays and weather data. Performs analytics."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.5.2",
    "scipy",
    "streamlit>=1.14.1",
]
